# SDL3_Vulkan

./: .gitignore  CMakeLists.txt  InputState.h  InputState.hpp  Main.cpp  Mat4.cpp  Mat4.h  PositionVertexBuffer.h  Quad.cpp  Quad.h  Renderer.cpp  Renderer.h  Scene.h  Scene.hpp  Scene01Clear.cpp  Scene01Clear.h  Scene01Clear.hpp  Scene02Quad.cpp  Scene02Quad.hpp  Scene02Triangle.cpp  Scene02Triangle.h  Scene03Cube.cpp  Scene03Cube.hpp  Scene03TriangleVertexBuffer.cpp  Scene03TriangleVertexBuffer.h  Scene04Sphere.cpp  Scene04Sphere.hpp  Scene04TriangleCullModes.cpp  Scene04TriangleCullModes.h  Scene05Bodies.cpp  Scene05Bodies.hpp  Scene06TriangleIndexed.cpp  Scene06TriangleIndexed.h  Scene07TextureQuad.cpp  Scene07TextureQuad.h  Scene08TextureQuadMoving.cpp  Scene08TextureQuadMoving.h  Time.cpp  Time.h  Time.hpp  (+2 more)
Content/Shaders/Compiled/DXIL/: PositionNormalColorTransform.vert.dxil  SpriteBatch.comp.dxil
Content/Shaders/Compiled/MSL/: PositionNormalColorTransform.vert.msl  SpriteBatch.comp.msl
Content/Shaders/Compiled/SPIRV/: PositionNormalColorTransform.vert.spv  PositionNormalTransform.vert.spv  SpriteBatch.comp.spv
Content/Shaders/Source/: PositionNormalColorTransform.vert.hlsl
Content/Shaders/SourceGLSL/: compile.bat
gdraw/: CMakeLists.txt  Cube.cpp  Cube.hpp  CubeMaterial.cpp  CubeMaterial.hpp  CubeMesh.cpp  CubeMesh.hpp  Drawable.cpp  Drawable.hpp  GpuUploader.cpp  GpuUploader.hpp  Material.cpp  Material.hpp  Quad.cpp  Quad.hpp  QuadMaterial.cpp  QuadMaterial.hpp  QuadMesh.cpp  QuadMesh.hpp  Renderer.cpp  Renderer.hpp  SphereCube.cpp  SphereCube.hpp  SphereCubeMaterial.cpp  SphereCubeMaterial.hpp  SphereCubeMesh.cpp  SphereCubeMesh.hpp  VertexTypes.hpp  Window.cpp  Window.hpp
gmath/: CMakeLists.txt  Core.cpp  Core.hpp  Mat2.cpp  Mat2.hpp  Mat3.cpp  Mat3.hpp  Mat4.cpp  Mat4.hpp  Quat.cpp  Quat.hpp  Vec.cpp  Vec.hpp
gphysics/: Body.cpp  Body.hpp  CMakeLists.txt  Contact.cpp  Contact.hpp  Intersections.cpp  Intersections.hpp  Particle.cpp  Particle.hpp  Shape.cpp  Shape.hpp  ShapeSphere.cpp  ShapeSphere.hpp
gplatform/: CMakeLists.txt  Precision.hpp
