cmake_minimum_required(VERSION 3.20)
project(graphics-SDL3)
set(CMAKE_CXX_STANDARD 20)
set(CMAKE_EXPORT_COMPILE_COMMANDS ON)

cmake_policy(SET CMP0135 NEW)
 
# SDL3
set(SDL3_VERSION 3.1.6)
find_package(SDL3 ${SDL3_VERSION} QUIET) # QUIET or REQUIRED
if (NOT SDL3_FOUND) # If there's none, fetch and build SDL3
    include(FetchContent)
    if (UNIX)
        FetchContent_Declare(
                SDL3
                URL https://github.com/libsdl-org/SDL/archive/refs/tags/preview-${SDL3_VERSION}.tar.gz
        )
        FetchContent_MakeAvailable(SDL3)
    elseif (WIN32)
        FetchContent_Declare(
                SDL3
                URL https://github.com/libsdl-org/SDL/archive/refs/tags/preview-${SDL3_VERSION}.zip
        )
        FetchContent_MakeAvailable(SDL3)
    endif()
endif()

file( GLOB graphics-with-SDL3_SOURCES *.cpp )
add_executable(${PROJECT_NAME} ${graphics-with-SDL3_SOURCES} "Main.cpp" "Window.h" "Window.cpp" "Time.h" "Time.cpp" "InputState.h" "Scene01Clear.h" "Scene01Clear.cpp" "Renderer.h" "Renderer.cpp" "Scene02Triangle.h" "Scene02Triangle.cpp" "Scene03TriangleVertexBuffer.cpp" "PositionVertexBuffer.h" "Scene06TriangleIndexed.cpp" "Scene07TextureQuad.h" "Scene07TextureQuad.cpp" "Mat4.h" "Mat4.cpp"   "Quad.h" "Quad.cpp" "Scene08TextureQuadMoving.h" "Scene08TextureQuadMoving.cpp")

target_include_directories(${PROJECT_NAME} PUBLIC ${SDL3_INCLUDE_DIRS})
target_link_libraries(${PROJECT_NAME} SDL3::SDL3)